# BLPConverter

./: .gitignore  CMakeLists.txt  blp.cpp  blp.h  main.cpp
dependencies/: CMakeLists.txt
dependencies/FreeImage/: CMakeLists.txt
dependencies/FreeImage/OpenEXR/IlmImf/: ImfAttribute.cpp
dependencies/squish/: CMakeLists.txt
